--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@
 /* activities section */
 .activities {
     width: 100%;
-    background-color: #F1FAEE;
+    background-color: #ffffff;
     text-align: center;
     color: #1D3557;
     padding: 1em 0 4em 0;
@@ -87,6 +87,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .guide--card {
@@ -96,7 +97,8 @@
     color: #1D3557;
     display: flex;
     margin: 0 auto;
-    background-color: #A8DADC;
+    background-color: #b88f8f;
+    border-radius: 20px;
 }
 
 .profile-pic {
@@ -181,5 +183,159 @@
     
     .guide--desc h4{
         padding: 1em 0;
+    }
+}
+body{
+    background: #eef8ff;
+}
+footer{
+    width: 100%;
+    bottom: 0;
+    background: linear-gradient(to left, #2d0b00, #4a425a);
+    color:#fff ;
+    padding: 30px 0 20px;
+    border-top-left-radius: 75px;
+    font-size: 16px;
+    line-height: 20px;
+    
+}
+.row{
+    width: 85;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+.col{
+    flex-basis:25%;
+    padding: 10px;
+}
+.col:nth-child(2),.col:nth-child(3){
+    flex-basis: 15%;
+
+}
+.logo{
+    width: 200px;
+    margin-bottom: 30px;
+}
+.col h3{
+    width: fit-content;
+    margin-bottom: 30px;
+    position: relative;
+}
+.email{
+    
+    width: fit-content;
+    border-bottom: 1px solid #ffffff;
+    margin: 20px 0;
+}
+.email a{
+    text-decoration: solid;
+    color: #7585fb;
+}
+
+ul li{
+    list-style: none;
+    margin-bottom: 12px;
+}
+ul li a{
+    text-decoration: none;
+    color: #ccc;
+}
+form{
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 50px;
+}
+form .far{
+    font-size: 18px;
+    margin-right: 10px;
+}
+form input{
+    width: 100%;
+    background: transparent;
+    color: #ccc;
+    border: 0;
+    outline: none;
+}
+form button{
+    background: transparent;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
+form button .fas{
+    font-size: 16px;
+    color: #ccc;
+}
+.social-icons .fab{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 40px;
+    font-size: 20px;
+    color: #000;
+    background: #fff;
+    margin-right: 15px;
+    cursor: pointer;
+
+
+}
+hr{
+    width:90% ;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+    margin: 20px auto;
+}
+.copyright{
+    text-align: center;
+}
+.underline{
+   width: 100%;
+   height: 5px;
+   background:#767676 ;
+   border-radius: 3px;
+   position: absolute;
+   top: 25px;
+   left: 0;
+   overflow: hidden;
+
+}
+.underline span{
+    width: 15px;
+    height: 100%;
+    background: #fff;
+    border-radius: 3px;
+    position: absolute;
+    top: 0;
+    left: 10px;
+    animation: moving 2s linear infinite;
+}
+@keyframes moving{
+    0%{
+        left: -20px;
+
+    }
+    100%{
+        left: 100%;
+        
+    }
+}
+@media (max-width: 700px){
+    footer{
+        bottom: unset;
+    }
+    .col{
+        flex-basis:100%;
+       
+    }
+    .col:nth-child(2),.col:nth-child(3){
+        flex-basis: 100%;
+    
     }
 }
