modified hero section

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,12 @@
 }
 body{
     height: 100vh;
-    background-color: #000;
+    /* background-color: #000; */
     background-size: cover;
     background-position: center;
 }
+
+/* Header section */
 .nav{
     width: 100%;
     min-height: 100vh;
@@ -74,10 +76,8 @@ nav ul li:hover::after{
     color: #fff;
     font-weight: 500;
     cursor: pointer;
-    
-    
-
 }
+
 .btn:hover{
     scale: 1.05;
     transition: 0.3s;
@@ -95,7 +95,7 @@ nav ul li:hover::after{
 .header-content{
     width: 80%;
     max-width: 800px;
-    margin: 0 auto;
+    margin: 2em auto;
     color: #fff;
     text-align: center;
     position: relative;
@@ -165,6 +165,18 @@ nav ul li:hover::after{
 }
 
 /*Responsive query*/
+@media screen and (max-width: 576px){
+    .header-content {
+        margin-top: 3em;
+    }
+    
+    .header-content h1{
+        font-size: 2rem;
+        margin: 0 0 1em 0;
+        line-height: 1;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .nav  {
       width: 100%; 
@@ -208,6 +220,15 @@ nav ul li:hover::after{
     .dropdown li a:hover::after{
         width: 100%;
     }
+
+    /* header content */
+
+    .header-content h1{
+        font-size: 2rem;
+        margin: 0 0 1em 0;
+        line-height: 1;
+    }
+
   }
 
 
@@ -351,9 +372,8 @@ nav ul li:hover::after{
         padding: 1em 0;
     }
 }
-body{
-    background: rgb(253, 253, 253);
-}
+
+
 footer{
     width: 100%;
     bottom: 0;
