--- a/styles.css
+++ b/styles.css
@@ -202,14 +202,6 @@ nav ul li:hover::after{
 
 }
 
-
-
-
-
-
-
-
-
 /*Dropdown menu*/
 .dropdown{
     
@@ -365,23 +357,36 @@ nav ul li:hover::after{
 
 /* activities section */
 .activities {
+    background-color: whitesmoke;
     width: 100%;
     text-align: center;
     color: #1D3557;
-    padding: 1em 0 4em 0;
+    padding: 1em 1em 4em 0;
 }
 
 .activities h1 {
-    padding: 1em 0 0 0;
+    padding: .5em 0 0 0;
+    font-size: 30px;
+    text-transform: uppercase;
 }
 
 .card {
-    max-width: 300px;
+    max-width: 330px;
+    padding: .5em 2em;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+    transition: .2s all ease-in-out;
+    cursor: pointer;
+}
+
+.card:hover {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
 }
 
 .card img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     margin-top: 1em;
 }
@@ -394,6 +399,7 @@ nav ul li:hover::after{
     display: flex;
     justify-content: space-around;
     margin-top: 3em;
+    gap: 1em;
 }
 
 /* guide section */
