--- a/Authentication/auth.css
+++ b/Authentication/auth.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image:  url(../images/background.jpg);
+    background-image:  url(../images/bkg.jpg);
     background-size:cover ;
     background-position: center;
     
@@ -11,18 +11,26 @@ body {
 .container {
     max-width: 400px;
     margin: 100px auto;
-    background: rgba(255, 255, 255, 0.3); 
+    background: rgba(150, 150, 150, 0.3); 
     backdrop-filter: blur(6px); 
     padding: 20px;
     border-radius: 12px;
     
+}
+.signOut{
+    color: white;
+    text-decoration: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 10px;  
 }
 
 
 h2 {
     margin-top: 0;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(252, 250, 250);
 }
 
 form {
@@ -32,7 +40,7 @@ form {
 
 label {
     margin-bottom: 5px;
-    color: rgb(0, 0, 0);
+    color: rgb(254, 253, 253);
 }
 
 input {
@@ -66,4 +74,15 @@ a {
 a:hover {
     text-decoration: underline;
     color: #5aa731;
+}
+@media screen and (max-width: 768px) {
+    .container {
+        max-width: 300px;
+        margin: 100px auto;
+        background: rgba(150, 150, 150, 0.3); 
+        backdrop-filter: blur(6px); 
+        padding: 20px;
+        border-radius: 12px;
+        
+    }
 }
