--- a/Authentication/auth.css
+++ b/Authentication/auth.css
@@ -15,6 +15,8 @@ body {
     backdrop-filter: blur(3px); 
     padding: 20px;
     border-radius: 12px;
+    text-align: center;
+    
     
 }
 .signOut{
@@ -39,8 +41,10 @@ form {
 }
 
 label {
+    text-align: left;
     margin-bottom: 5px;
     color: rgb(254, 253, 253);
+    display: block;
 }
 
 input {
@@ -50,6 +54,8 @@ input {
     border-radius: 5px;
     background: rgba(255, 255, 255, 0.3); 
     backdrop-filter: blur(20px); 
+    width: 90%;
+    
     
 }
 
@@ -60,6 +66,9 @@ button {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    display: block;
+    padding: center;
+    width: 100%;
 }
 
 button:hover {
